# llm-batch-runner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  results.jsonl  runs.db
src/llm_batch_runner/: __init__.py  demo.py  main.py  utils.py
src/llm_batch_runner/utils/: __init__.py  db.py  paths.py  ratelimit.py  results.py  workers.py
