[project]
name = "llm-batch-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikhael Gaster", email = "mikhaelgaster@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "openai>=1.102.0",
    "polars>=1.32.3",
    "pydantic-ai>=0.8.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "tenacity>=9.1.2",
]

[project.scripts]
llm-batch-runner = "llm_batch_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
